// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlanRunsList Component should match snapshot while loading 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="mb-2"
    >
      <h2
        class="text-xl font-semibold text-text-emphasis"
      >
        Plan Runs
      </h2>
    </div>
    <div
      data-testid="loading"
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`PlanRunsList Component should match snapshot with empty runs 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="mb-2"
    >
      <h2
        class="text-xl font-semibold text-text-emphasis"
      >
        Plan Runs
      </h2>
    </div>
    <div
      class="empty-state"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-play empty-state-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
        />
      </svg>
      <p
        class="empty-state-title"
      >
        No plan runs yet. Generate jobs from a production plan to create a run.
      </p>
    </div>
  </div>
</div>
`;

exports[`PlanRunsList Component should match snapshot with runs 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="mb-2"
    >
      <h2
        class="text-xl font-semibold text-text-emphasis"
      >
        Plan Runs
      </h2>
    </div>
    <div
      class="overflow-x-auto rounded-sm border border-overlay-subtle"
    >
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm"
        >
          <thead
            class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
          >
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void"
            >
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-heading)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Product
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-heading)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Plan
              </th>
              <th
                class="h-10 px-2 align-middle font-semibold text-[var(--color-heading)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
              >
                Qty
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-heading)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Status
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-heading)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Jobs
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-heading)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Created
              </th>
              <th
                class="h-10 px-2 align-middle font-semibold text-[var(--color-heading)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              >
                Actions
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-panel hover:bg-background-elevated"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-emphasis text-sm"
              >
                Rifter
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-primary text-sm"
              >
                Rifter Plan
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-text-primary text-sm"
              >
                10
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                <div
                  class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] capitalize cursor-default bg-amber-manufacturing/10 border-amber-manufacturing/30 text-amber-manufacturing"
                >
                  In Progress
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
              >
                1/5 done, 2 active
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
              >
                2/22/2026
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              >
                <button
                  class="p-1 rounded hover:bg-rose-danger/10 text-rose-danger"
                  title="Cancel planned jobs"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle-x h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="m15 9-6 6"
                    />
                    <path
                      d="m9 9 6 6"
                    />
                  </svg>
                </button>
              </td>
            </tr>
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-background-void hover:bg-background-elevated"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-emphasis text-sm"
              >
                Slasher
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-primary text-sm"
              >
                Slasher Plan
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-text-primary text-sm"
              >
                3
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                <div
                  class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] capitalize cursor-default bg-overlay-subtle border-overlay-strong text-text-secondary"
                >
                  Completed
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
              >
                3/3 done
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-text-secondary text-[13px]"
              >
                2/22/2026
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
